[package]
name = "wasm_winit_wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
env_logger = "0.11"

[dependencies.web-sys]
version = "0.3"
features = [ 'Document', 'Element', 'HtmlElement', 'Node', 'Window', ]
