[package]
name = "wasm_winit_wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
log = "0.4"
wgpu = "0.20"
winit = "0.30"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ 'Document', 'Element', 'HtmlCanvasElement', 'HtmlElement', 'Node', 'Window' ] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
env_logger = "0.11"
pollster = "0.3"
