[package]
name = "wasm_winit_wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
egui = { git = "https://github.com/kwillemsen/egui.git", branch = "winit-0.30" }
egui-wgpu = { git = "https://github.com/kwillemsen/egui.git", branch = "winit-0.30" }
egui-winit = { git = "https://github.com/kwillemsen/egui.git", branch = "winit-0.30", default-features = false, features = ["links", "wayland", "x11"] }
log = "0.4"
palette = "0.7"
pollster = "0.3"
wgpu = "0.20"
winit = "0.30"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ 'Document', 'Element', 'HtmlCanvasElement', 'HtmlElement', 'Node', 'Window' ] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
env_logger = "0.11"
